<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settings_back_btn"
        style="@style/Button24dp"
        android:contentDescription="@string/iv_icon_desc"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/settings_title"
        app:layout_constraintStart_toStartOf="parent" />

    <com.hardcodecoder.noteit.views.SettingsToggleableItem
        android:id="@+id/settings_enable_dark_mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_back_btn"
        app:settingsToggleableItemText="@string/enable_dark_mode_desc"
        app:settingsToggleableItemTitle="@string/enable_dark_mode_title" />

    <com.hardcodecoder.noteit.views.SettingsToggleableItem
        android:id="@+id/settings_use_black_color_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_enable_dark_mode_layout"
        app:settingsToggleableItemText="@string/use_pure_black_desc"
        app:settingsToggleableItemTitle="@string/use_pure_black_title" />

    <com.hardcodecoder.noteit.views.SettingsToggleableItem
        android:id="@+id/settings_enable_auto_theme_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_use_black_color_layout"
        app:settingsToggleableItemText="@string/enable_auto_theme_desc"
        app:settingsToggleableItemTitle="@string/enable_auto_theme_title" />

</androidx.constraintlayout.widget.ConstraintLayout>