<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context=".ui.CreateNotes">

    <ImageView
        android:id="@+id/close_btn"
        style="@style/Button24dp"
        android:contentDescription="@string/image_btn_desc"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/save_btn"
        style="@style/Button24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_btn_desc"
        android:src="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/discard_btn"
        style="@style/Button24dp"
        android:contentDescription="@string/image_btn_desc"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toStartOf="@id/save_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_enter_title"
        android:background="@android:color/transparent"
        android:hint="@string/hint_enter_title"
        android:inputType="textPersonName|textAutoComplete"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="?primaryColorOnBackground"
        android:textColorHint="?secondaryColorOnBackground"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/close_btn"
        app:layout_constraintTop_toBottomOf="@id/close_btn" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/hint_enter_note"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:gravity="top|start"
        android:hint="@string/hint_enter_note"
        android:inputType="textMultiLine|textAutoComplete"
        android:isScrollContainer="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColorHint="?secondaryColorOnBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

</androidx.constraintlayout.widget.ConstraintLayout>