<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/image_btn_desc"
        android:padding="12dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/image_user_desc"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        tools:src="@drawable/ic_user" />

    <ProgressBar
        android:id="@+id/progress_bar_circular"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/user_img"
        app:layout_constraintEnd_toEndOf="@id/user_img"
        app:layout_constraintStart_toStartOf="@id/user_img"
        app:layout_constraintTop_toTopOf="@id/user_img"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/products_sans_medium"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1.25"
        android:textColor="?primaryColorOnBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_img"
        tools:text="Display name : Ashutosh\nUseremail@email.com" />

    <ImageView
        android:id="@+id/user_email_edit_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_btn_desc"
        android:padding="6dp"
        android:src="@drawable/ic_note"
        app:layout_constraintBottom_toBottomOf="@id/user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/user_email" />

    <!--
    <TextView
        android:id="@+id/total_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1.25"
        android:text="Total user notes  : 5\nTotal storage used : 5 KB"
        android:textColor="?primaryColorOnBackground"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email" />
        -->

    <TextView
        android:id="@+id/last_synced"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:textColor="?secondaryColorOnBackground"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        tools:text="Last synced : " />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_out"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_synced" />


    <TextView
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:textColor="?secondaryColorOnBackground"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Note It from HardcodeCoder v0.0.4-Debug " />

</androidx.constraintlayout.widget.ConstraintLayout>